crates/swc_ecma_parser/tests/test262-error-references/fail/3178dcc570888e15.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/3178dcc570888e15.js:1:10
  |
1 | function true() { }
  |          ^^^^

